hphp/test/quick/on_list_assign.php.expectf
Fatal error: You cannot use this syntax on the left-hand side of an assignment. in %s/on_list_assign.php on line 12